sfdc-integration-accelerator/src/objects/MuleIntegrationObject__mdt/MuleIntegrationObject__mdt.object-meta.xml
<CustomObject>
    <description>All the objects types and fields that will be integrated related to a Mule Integration</description>
    <label>Mule Integration Object</label>
    <pluralLabel>Mule Integration Objects</pluralLabel>
</CustomObject>