sfdc-integration-accelerator/src/objects/MuleIntegrationObject__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Fields from this Object that will be integrated (if they are filled)</description>
    <label>Fields</label>
    <length>2046</length>
    <type>LongTextArea</type>
</CustomField>