sfdc-integration-accelerator/src/objects/MuleIntegrationObject__mdt/fields/MuleIntegration__c.field-meta.xml
<CustomField>
    <fullName>MuleIntegration__c</fullName>
    <description>Related Mule Integration</description>
    <label>Mule Integration</label>
    <referenceTo>MuleIntegration__mdt</referenceTo>
    <relationshipLabel>Integration Objects</relationshipLabel>
    <relationshipName>MuleIntegrationObjects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>