sfdc-integration-accelerator/src/objects/MuleIntegrationObject__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>SObject Type API Name, ex: Account or YourCustomObject__c</description>
    <label>SObject Type</label>
    <length>90</length>
    <required>true</required>
    <type>Text</type>
</CustomField>